--- a/src/app/ui/frontend/homepage/homepage.component.html
+++ b/src/app/ui/frontend/homepage/homepage.component.html
@@ -1,1 +1,9 @@
-<p>homepage works!</p>
+<mat-grid-list cols="1" rowHeight="2:1">
+    <mat-grid-tile>
+        <div style="text-align: center;">
+            <h3>WRITE YOUR MEMORIES</h3>
+            <img class="cover-img" src="./assets/img/writer.png">
+            <h3>SHARE IT WHEN YOU WANT</h3>
+        </div>
+    </mat-grid-tile>
+</mat-grid-list>
