--- a/src/app/ui/frontend/homepage/homepage.component.html
+++ b/src/app/ui/frontend/homepage/homepage.component.html
@@ -4,6 +4,9 @@
             <h3>WRITE YOUR MEMORIES</h3>
             <img class="cover-img" src="./assets/img/writer.png">
             <h3>SHARE IT WHEN YOU WANT</h3>
+            <button routerLink="/login" mat-raised-button style="margin-right:10px">Iniciar Sesión</button>
+            <button routerLink="/signup" mat-raised-button>Registrarse</button>
         </div>
     </mat-grid-tile>
 </mat-grid-list>
+
