--- a/src/app/ui/frontend/login/login.component.html
+++ b/src/app/ui/frontend/login/login.component.html
@@ -2,6 +2,7 @@
     <mat-grid-tile>
         <div style="text-align: center;">
             <div class="form">
+                <h2 routerLink="/">SELF MEMORY</h2>
                 <h3> Iniciar sesión</h3>
                 <mat-divider></mat-divider>
 
