--- a/src/app/ui/panel/homepanel/homepanel.component.html
+++ b/src/app/ui/panel/homepanel/homepanel.component.html
@@ -7,9 +7,9 @@
             {{user.lastname}}
         </mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item routerLink="/admin/memory">Mi Libro</a>
-            <a mat-list-item routerLink="/admin/chapters">Capítulos</a>
-            <a mat-list-item routerLink="/admin/config">Configuración</a>
+            <a mat-list-item routerLink="/memory/write">Mi Libro</a>
+            <a mat-list-item routerLink="/memory/chapter">Capítulos</a>
+            <a mat-list-item routerLink="/memory/config">Configuración</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
