--- a/src/app/ui/panel/homepanel/homepanel.component.html
+++ b/src/app/ui/panel/homepanel/homepanel.component.html
@@ -26,7 +26,7 @@
                 </button>
             </div>
         </mat-toolbar>
-        <div class="content">
+        <div class="container">
             <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
