--- a/src/app/ui/panel/memory/memory.component.html
+++ b/src/app/ui/panel/memory/memory.component.html
@@ -1,1 +1,13 @@
-<p>memory works!</p>
+<h3>START YOU DATA MEMORY</h3>
+<form #f="ngForm" (ngSubmit)="save()" *ngIf="memory">
+    <mat-form-field class="width100">
+        <input matInput type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="memory.title"
+            placeholder="My Title">
+    </mat-form-field>
+    <mat-form-field class="width100">
+        <input type="text" matInput [ngModelOptions]="{standalone: true}" [(ngModel)]="memory.subtitle"
+            placeholder="Sub Title">
+    </mat-form-field>
+    <button mat-raised-button type="submit">SAVE IT</button>
+
+</form>
