--- a/src/app/ui/panel/homepanel/homepanel.component.html
+++ b/src/app/ui/panel/homepanel/homepanel.component.html
@@ -2,10 +2,7 @@
     <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
         [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
         [opened]="!(isHandset$ | async)">
-        <mat-toolbar *ngIf="user">
-            {{user.email}}<br/>
-            {{user.lastname}}
-        </mat-toolbar>
+
         <mat-nav-list>
             <a mat-list-item routerLink="/memory/write">Mi Libro</a>
             <a mat-list-item routerLink="/memory/chapter">Capítulos</a>
@@ -18,7 +15,8 @@
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
             <div fxFlex="50">
-                <span class="discovery" routerLink="/">Administrar</span>
+                <span class="discovery" routerLink="/"> {{user.email}}<br />
+                </span>
             </div>
             <div fxLayout="row" fxFlex="50" fxLayoutAlign="end start">
                 <button mat-icon-button id="btnLogout" (click)="logout()">
