--- a/src/app/ui/panel/homepanel/homepanel.component.html
+++ b/src/app/ui/panel/homepanel/homepanel.component.html
@@ -4,7 +4,7 @@
         [opened]="!(isHandset$ | async)">
 
         <mat-nav-list>
-            <a mat-list-item routerLink="/memory/write">Mi Libro</a>
+            <a mat-list-item routerLink="/memory/">Mi Libro</a>
             <a mat-list-item routerLink="/memory/chapter">Capítulos</a>
             <a mat-list-item routerLink="/memory/config">Configuración</a>
         </mat-nav-list>
