--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,14 +174,6 @@ $mat-primary: (
 );
 $theme-primary: mat-palette($mat-primary, main, lighter, darker);
 
-body {
-  --accent-color: #797979;
-  --accent-lighter-color: #d7d7d7;
-  --accent-darker-color: #5c5c5c;
-  --text-accent-color: #{$light-primary-text};
-  --text-accent-lighter-color: #{$dark-primary-text};
-  --text-accent-darker-color: #{$light-primary-text};
-}
 
 $mat-accent: (
   main: #797979,
@@ -197,15 +189,6 @@ $mat-accent: (
     ),
 );
 $theme-accent: mat-palette($mat-accent, main, lighter, darker);
-
-body {
-  --warn-color: #0b8a16;
-  --warn-lighter-color: #d3fad7;
-  --warn-darker-color: #084b0c;
-  --text-warn-color: #{$dark-primary-text};
-  --text-warn-lighter-color: #{$dark-primary-text};
-  --text-warn-darker-color: #{$dark-primary-text};
-}
 
 $mat-warn: (
   main: #6ded78,
@@ -339,4 +322,7 @@ hr {
   color: #2f3749;
   opacity: 1;
   padding: 20px;
+}
+.midle {
+  width: 50vw;
 }
