--- a/src/app/ui/panel/homepanel/homepanel.component.html
+++ b/src/app/ui/panel/homepanel/homepanel.component.html
@@ -2,7 +2,6 @@
     <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
         [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
         [opened]="!(isHandset$ | async)">
-
         <mat-nav-list>
             <a mat-list-item routerLink="/memory/">Mi Libro</a>
             <a mat-list-item routerLink="/memory/chapter">Capítulos</a>
@@ -15,7 +14,7 @@
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
             <div fxFlex="50">
-                <span class="discovery" routerLink="/"> {{user.email}}<br />
+                <span *ngIf="user" class="discovery" routerLink="/"> {{user.email}}<br />
                 </span>
             </div>
             <div fxLayout="row" fxFlex="50" fxLayoutAlign="end start">
