--- a/src/app/ui/component/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/ui/component/confirm-dialog/confirm-dialog.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-    {{message}}
+    {{data.message}}
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No</button>
