--- a/src/app/ui/frontend/homepage/homepage.component.html
+++ b/src/app/ui/frontend/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <mat-grid-list cols="1" rowHeight="2:1">
     <mat-grid-tile>
         <div style="text-align: center;">
-            <h3>Escribe tus Memerias</h3>
+            <h3>Escribe tus Memorias</h3>
             <img class="cover-img" src="./assets/img/writer.png">
             <h3>Compartelo al email que quieras</h3>
             <button routerLink="/login" mat-raised-button style="margin-right:10px">Iniciar Sesión</button>
