--- a/src/app/ui/panel/welcome/welcome.component.html
+++ b/src/app/ui/panel/welcome/welcome.component.html
@@ -1,1 +1,9 @@
-<p>welcome works!</p>
+<mat-grid-list cols="1" rowHeight="2:1">
+    <mat-grid-tile>
+        <div style="text-align: center;">
+            <h3>Bienvenido!!!</h3>
+            <img class="cover-img" src="./assets/img/writer.png">
+        </div>
+    </mat-grid-tile>
+</mat-grid-list>
+
